        - Dispatch now creates bblog output file with a timestamp appended so
          that we can maintain multiple fail/pass logs for review
        - fix issue in Git where in some cases, we'd fail looking up a repo,
          but weren't receiving any errors. This rendered tests to fail, but the
          process to proceed (fixes #247)

2.21    2019-06-07
        - modified text in dispatch auto mode LCD output (closes #233)
        - Dispatch auto() now logs at startup how many seconds between each test
          run (closes #238)
        - removed a debug print line from Dispatch::auto()'s LCD output
          (closes #244)
        - fix issue in brew_info tests where perlbrew added non-conforming
          versions in 'perlbrew available'
        - in BC::installed() we now croak if the proper params not sent in
        - if only one Perl is installed, we now check to ensure we have the
          perl version header in the results, if not, we add it (fixes #241)
        - if we're using LCD output and the LCD is 4 row by 20 col, display the
          number of test failures (closes #235)
        - add troubleshooting section in POD to inform how to proceed if
          installation fails (closes #242)

2.20    2018-04-16
        - modified layout of LCD output to be more conducive of numerous runs
        - refactored the bbdispatch "auto" argument handling, fixing an issue
          where setting a run count never stopped auto mode (fixes #224)
        - cleanup of logging in auto mode upon completion of a run
        - updated perls in Travis CI to include 5.26, 5.24
        - removed requirement for external t/script/bbtester_kill.pl script
          (fixes #226)
        - fix issue in Git::clone() where we weren't croaking if a fatal error
          when cloning was encountered
        - fix issue in t_bugs/164_dispatch_show_help_on_bad_args.t where we
          were reading the config file causing failure. Now we just move it out